feat: Fase 3 completada - Auth, roles, escaner, FCM y despliegue