@@ -1,5 +1,6 @@
 package com.stockly.api.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,18 +13,26 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    // En desarrollo: "http://localhost:*,http://127.0.0.1:*"
+    // En producción: valor de CORS_ALLOWED_ORIGINS en Render
+    @Value("${cors.allowed.origins:http://localhost:*,http://127.0.0.1:*}")
+    private String allowedOriginsRaw;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(List.of("http://localhost:*", "http://127.0.0.1:*")); // Para desarrollo
+
+        List<String> origenes = Arrays.asList(allowedOriginsRaw.split(","));
+        config.setAllowedOriginPatterns(origenes);
+
         config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setExposedHeaders(Arrays.asList("Content-Type", "Authorization", "X-Total-Count"));
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", config);
-        
+
         return new CorsFilter(source);
     }
 }
